examples/test/testpolicy11240.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11240
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key12: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value39
          key3: value24
          key41: value44
      podSelector:
        matchLabels:
          key49: value42
